--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -170,7 +170,7 @@
 	max-height: 100px;
 	border-radius: 50%;
 	margin: 10px;
-	border: 1px solid gray;
+	border: 1px solid rgb(230, 227, 227);
 	cursor: pointer;
 }
 
