[Priyanka]Added:Monexo replace with P2P Lending

--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -115,7 +115,7 @@
 
             <!-- <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li> -->
             <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
-            <li style="cursor:pointer;" ><a (click)="monexoLink()">Monexo</a></li>
+            <li style="cursor:pointer;" ><a (click)="monexoLink()">P2P Lending</a></li>
 
           </ul>
         </div>
@@ -152,7 +152,7 @@
 
             <!-- <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li> -->
             <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
-            <li style="cursor:pointer;" ><a (click)="monexoLink()">Monexo</a></li>
+            <li style="cursor:pointer;" ><a (click)="monexoLink()">P2P Lending</a></li>
 
           </ul>
         </div>
