--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark header-nav">
+<nav class="navbar navbar-expand-sm navbar-dark header-nav ">
   <div class="container pos-rel">
     <a class="navbar-brand" [routerLink]="['/']">
       <img src="assets/img/finizon_logo.png" class="logo" alt="logo">
@@ -263,6 +263,5 @@
   </div>
 </div>
 
-<app-support-modal #supportModal>
-  <!-- Add the content for the support modal here -->
-</app-support-modal>
+<!-- <app-support-modal #supportModal>
+</app-support-modal> -->
