--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,10 +22,10 @@
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
         <div class="carousel-item " *ngFor=" let banners of CommonBannerlist; let i=index" [ngClass]="i==0?'active':''">
-          <div class="row align-items-center">
+          <div class="row align-items-center Banner">
             <div class="col-12 hidden-lg hidden-sm order-2 order-lg-1">
 
-              <h4 class="slider-head" [innerHTML]="banners?.heading"></h4>
+              <h4 class="slider-head " [innerHTML]="banners?.heading"></h4>
             </div>
             <div class="col-lg-8 col-12 order-2 order-lg-1">
 
