--- a/src/app/views/pages/wealth-home/wealth-home.component.css
+++ b/src/app/views/pages/wealth-home/wealth-home.component.css
@@ -22,6 +22,10 @@
     background-image: url('../../../../assets/img/arrow_left.svg');
 }
 
+.Banner{
+    margin-top: 7rem !important;
+}
+
 .carousel-control-next-icon {
     background-image: url('../../../../assets/img/arrow_right.svg');
 }
